fix: improve image loading and performance

--- a/about.html
+++ b/about.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - EcoPrint</title>
+    <meta
+      name="description"
+      content="Learn more about EcoPrint Generation — an eco-friendly printing company dedicated to sustainable design, green technology, and innovation."
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
+      fetchpriority="high"
+    />
     <link rel="stylesheet" href="style.css" />
-    <!-- <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -19,7 +26,11 @@
     <nav class="navbar">
       <div class="container">
         <a href="#" class="brand">
-          <img src="img/Ecoprint Logo 3.png" alt="Logo" class="logo" />
+          <img
+            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            alt="Logo"
+            class="logo"
+          />
         </a>
         <button class="hamburger" id="hamburger">
           <span></span>
@@ -136,7 +147,7 @@
             <!-- Center image with play -->
             <figure class="about-media" data-animate="up">
               <img
-                src="img/school.jpeg"
+                src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/ysebe2zp7uycypgftazo.jpg"
                 alt="EcoPrint process splash"
                 loading="lazy"
               />
@@ -230,7 +241,7 @@
                 data-wow-duration="1s"
                 data-wow-delay="0.2s"
               >
-                <img src="img/about-left-image.png" alt="person graphic" />
+                <!-- <img src="img/about-left-image.png" alt="person graphic" /> -->
               </div>
             </div>
             <div class="col-lg-8">
@@ -240,7 +251,10 @@
                 </div>
                 <div class="service-card fadeIn">
                   <div class="icon">
-                    <img src="img/sustainability.png" alt="sustainability" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146414/EcoPrintGeneration/img/up4cii8inoogxkxkcrb9.png"
+                      alt="sustainability"
+                    />
                   </div>
                   <div class="right-text">
                     <h4>Sustainability</h4>
@@ -253,7 +267,10 @@
 
                 <div class="service-card fadeIn">
                   <div class="icon">
-                    <img src="img/innovation.png" alt="Innovation" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146385/EcoPrintGeneration/img/vvdzfzaxq9sz0id71g4m.png"
+                      alt="Innovation"
+                    />
                   </div>
                   <div class="right-text">
                     <h4>Innovation</h4>
@@ -266,7 +283,10 @@
 
                 <div class="service-card fadeIn">
                   <div class="icon">
-                    <img src="img/education.png" alt="education" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/b0h2um6fc8kvgz2rjp58.png"
+                      alt="education"
+                    />
                   </div>
                   <div class="right-text">
                     <h4>Education</h4>
@@ -279,7 +299,10 @@
 
                 <div class="service-card fadeIn">
                   <div class="icon">
-                    <img src="img/community.png" alt="community" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/z3lv8ycegptzadk35yfa.png"
+                      alt="community"
+                    />
                   </div>
                   <div class="right-text">
                     <h4>Community</h4>
@@ -345,7 +368,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/collecting plastic.jpg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
                     alt="Collecting plastic waste"
                     loading="lazy"
                   />
@@ -363,7 +386,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/sorting2.jpeg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146415/EcoPrintGeneration/img/t8ga5jh4zvsguw8gli8g.jpg"
                     alt="Sorting and cleaning"
                     loading="lazy"
                   />
@@ -378,7 +401,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/Sort and Clean.jpg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146412/EcoPrintGeneration/img/hao3bmjq9hdev3dqodgc.jpg"
                     alt="Shredding plastic"
                     loading="lazy"
                   />
@@ -393,7 +416,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/extrusion.jpeg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
                     alt="Extrusion to filament"
                     loading="lazy"
                   />
@@ -410,7 +433,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/spool3.jpeg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146412/EcoPrintGeneration/img/t33lagtr2hnuhlshy0wy.jpg"
                     alt="Spooling filament"
                     loading="lazy"
                   />
@@ -425,7 +448,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/pellets.jpeg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146385/EcoPrintGeneration/img/hv0fhn3t3wkfwoevqzcf.jpg"
                     alt="3D printing models"
                     loading="lazy"
                   />
@@ -440,7 +463,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="img/edu.jpg"
+                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/d7oplxia9xnqffcw0oat.jpg"
                     alt="STEM education models in use"
                     loading="lazy"
                   />
@@ -467,7 +490,10 @@
             <!-- SEO Analysis -->
             <div class="col-lg-3 col-md-6">
               <div class="portfolio-item">
-                <img src="img/sdg4.png" alt="SEO Analysis" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
+                  alt="SEO Analysis"
+                />
                 <div class="hidden-content">
                   <h4>Quality Education (SDG 4)</h4>
                   <p>
@@ -481,7 +507,10 @@
             <!-- Website Reporting -->
             <div class="col-lg-3 col-md-6">
               <div class="portfolio-item">
-                <img src="img/sdg8.png" alt="Website Reporting" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
+                  alt="Website Reporting"
+                />
                 <div class="hidden-content">
                   <h4>Decent Work & Growth (SDG 8)</h4>
                   <p>
@@ -495,7 +524,10 @@
             <!-- Performance Tests -->
             <div class="col-lg-3 col-md-6">
               <div class="portfolio-item">
-                <img src="img/sdg12.png" alt="Performance Tests" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
+                  alt="Performance Tests"
+                />
                 <div class="hidden-content">
                   <h4>Responsible Consumption (SDG 12)</h4>
                   <p>
@@ -528,7 +560,10 @@
               <li class="video-card bg-blue">
                 <article>
                   <div class="image-container">
-                    <img src="img/beachclean up.jpg" alt="NTV Interview" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146401/EcoPrintGeneration/img/dlvdjdn3gd1lsvzlw2in.jpg"
+                      alt="NTV Interview"
+                    />
                     <button class="about-play" type="button">
                       <svg width="26" height="26" viewBox="0 0 24 24">
                         <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
@@ -556,7 +591,10 @@
               <li class="video-card bg-red">
                 <article>
                   <div class="image-container">
-                    <img src="img/beachclean up.jpg" alt="TV47 Pitch" />
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
+                      alt="TV47 Pitch"
+                    />
                     <button class="about-play" type="button">
                       <svg width="26" height="26" viewBox="0 0 24 24">
                         <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
@@ -585,7 +623,7 @@
                 <article>
                   <div class="image-container">
                     <img
-                      src="img/collecting plastic.jpg"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
                       alt="Dominique Ernst"
                     />
                     <button class="about-play" type="button">
@@ -616,7 +654,7 @@
                 <article>
                   <div class="image-container">
                     <img
-                      src="img/collecting plastic.jpg"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146386/EcoPrintGeneration/img/ksy8kqdvbamgto9ce6j1.jpg"
                       alt="Dominique Ernst"
                     />
                     <button class="about-play" type="button">
@@ -647,7 +685,7 @@
                 <article>
                   <div class="image-container">
                     <img
-                      src="img/collecting plastic.jpg"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
                       alt="Dominique Ernst"
                     />
                     <button class="about-play" type="button">
@@ -681,15 +719,18 @@
       </section>
 
       <!-- Articles Section -->
-      <section class="media-section">
+      <section class="media-section" id="media">
         <div class="container">
           <div class="section-header">
             <h2>Articles</h2>
             <p>Read our latest stories and press features.</p>
           </div>
 
-          <div class="scroll-container">
-            <button class="scroll-btn left">&#10094;</button>
+          <div class="scroll-wrapper">
+            <button class="scroll-btn left" aria-label="Scroll left">
+              &#10094;
+            </button>
+
             <ul class="scroll-track videos-track">
               <li class="video-card bg-blue">
                 <article>
@@ -794,6 +835,40 @@
               </li>
 
               <li class="video-card bg-pink">
+                <article>
+                  <div class="content">
+                    <header>
+                      <h4 class="tag">Article</h4>
+                      <h3>
+                        <a href=""
+                          >Shaping the Future of 3D Printing with Recycled
+                          Materials</a
+                        >
+                      </h3>
+                      <p class="meta">
+                        <small>Jan 7, 2020</small> |
+                        <small>Daily Nation</small> |
+                        <small>By Margaret Maina</small>
+                      </p>
+                    </header>
+                    <main>
+                      <p>
+                        E3D Print Generation is a sustainable 3D printing
+                        company focused on converting recycled materials into
+                        useful, eco-friendly products. The firm combines
+                        creativity and innovation to offer cost-effective
+                        small-scale manufacturing, prototyping, and educational
+                        programs. Its mission is to promote environmental
+                        sustainability through technology by reducing plastic
+                        waste and empowering communities to create value from
+                        recycled materials.
+                      </p>
+                    </main>
+                  </div>
+                </article>
+              </li>
+
+              <li class="video-card bg-blue">
                 <article>
                   <div class="content">
                     <header>
@@ -841,7 +916,11 @@
               <div class="responsive-cell-block team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="img/Ecoprint Logo 3.png" />
+                    <img
+                      class="team-img"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146400/EcoPrintGeneration/img/xz55ngsdoxzjld3uqlqv.jpg"
+                      alt="team 1"
+                    />
                   </div>
                   <p class="text-blk name">Eco Print</p>
                   <p class="text-blk position">CEO</p>
@@ -850,7 +929,11 @@
               <div class="responsive-cell-block team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="img/beauty2.jpeg" />
+                    <img
+                      class="team-img"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
+                      alt="team 2"
+                    />
                   </div>
                   <p class="text-blk name">Eco Print</p>
                   <p class="text-blk position">Member</p>
@@ -859,7 +942,11 @@
               <div class="responsive-cell-block team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="img/collecting plastic.jpg" />
+                    <img
+                      class="team-img"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
+                      alt="team 3"
+                    />
                   </div>
                   <p class="text-blk name">Eco Print</p>
                   <p class="text-blk position">Member</p>
@@ -868,7 +955,11 @@
               <div class="responsive-cell-block team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="img/community.png" />
+                    <img
+                      class="team-img"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/rn8r2v4i5ygdhrchbnsf.jpg"
+                      alt="team 4"
+                    />
                   </div>
                   <p class="text-blk name">Eco Print</p>
                   <p class="text-blk position">Member</p>
@@ -877,7 +968,11 @@
               <div class="responsive-cell-block team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="img/beachclean up.jpg" />
+                    <img
+                      class="team-img"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
+                      alt="team 5"
+                    />
                   </div>
                   <p class="text-blk name">Eco Print</p>
                   <p class="text-blk position">Instructor</p>
@@ -929,11 +1024,17 @@
         </div>
         <div class="support">
           <div class="supporter-logo">
-            <img src="img/ctg.png" alt="Partner 1" />
+            <img
+              src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/kgpdl32nkqn8f3btagdo.png"
+              alt="Partner 1"
+            />
           </div>
 
           <div class="supporter-logo">
-            <img src="img/Infitech logo.png" alt="Partner 2" />
+            <img
+              src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146384/EcoPrintGeneration/img/zm1rmu7wl85vknrf3p7q.png"
+              alt="Partner 2"
+            />
           </div>
         </div>
       </section>
@@ -962,13 +1063,10 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#projects">Projects</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#donate">Donate</a></li>
-            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
 
