--- a/shop.html
+++ b/shop.html
@@ -55,20 +55,20 @@
           style="
             --img: url('https://images.unsplash.com/photo-1490481651871-ab68de25d43d?q=80&w=1600&auto=format&fit=crop');
           "
-          aria-label="We Are Hexashop"
+          aria-label="shop on EcoPrint"
         >
           <div class="card__inner">
             <div class="card__title-block">
-              <h2 class="card__title card__title--xl">We Are Hexashop</h2>
+              <h2 class="card__title card__title--xl">Shop On EcoPrint</h2>
               <p class="card__subtitle">
-                Awesome, clean &amp; creative HTML5 Template
+                Handmade, Upclyed &amp; Wonderful products
               </p>
               <a href="#" class="btn">Purchase Now!</a>
             </div>
           </div>
         </article>
 
-        <!-- WOMEN -->
+        <!-- STEM Models -->
         <article
           class="card"
           style="
@@ -77,17 +77,17 @@
           aria-label="Women"
         >
           <div class="card__inner">
-            <h3 class="badge">Women</h3>
+            <h3 class="badge">STEM Models</h3>
             <div class="hover">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit incid.
               </p>
-              <a href="#" class="btn btn--ghost">Discover More</a>
+              <a href="#stem" class="btn btn--ghost">Discover More</a>
             </div>
           </div>
         </article>
 
-        <!-- MEN -->
+        <!--Archtecture <br />Prototype<-->
         <article
           class="card"
           style="
@@ -96,15 +96,15 @@
           aria-label="Men"
         >
           <div class="card__inner">
-            <h3 class="badge">Men</h3>
+            <h3 class="badge">Archtecture <br />Prototype</h3>
             <div class="hover">
               <p>Best clothes for men. New arrivals, essentials, and suits.</p>
-              <a href="#" class="btn btn--ghost">Discover More</a>
+              <a href="#prototype" class="btn btn--ghost">Discover More</a>
             </div>
           </div>
         </article>
 
-        <!-- KIDS -->
+        <!-- 3D printed <br />Accessories -->
         <article
           class="card"
           style="
@@ -113,15 +113,15 @@
           aria-label="Kids"
         >
           <div class="card__inner">
-            <h3 class="badge">Kids</h3>
+            <h3 class="badge">3D printed <br />Accessories</h3>
             <div class="hover">
               <p>Best clothes for kids. Soft fabrics and playful fits.</p>
-              <a href="#" class="btn btn--ghost">Discover More</a>
+              <a href="#accessories" class="btn btn--ghost">Discover More</a>
             </div>
           </div>
         </article>
 
-        <!-- ACCESSORIES -->
+        <!-- Custom -->
         <article
           class="card"
           style="
@@ -130,10 +130,10 @@
           aria-label="Accessories"
         >
           <div class="card__inner">
-            <h3 class="badge">Accessories</h3>
+            <h3 class="badge">Customize Your <br />Product</h3>
             <div class="hover">
               <p>Best trend accessories to finish every look.</p>
-              <a href="#" class="btn btn--ghost">Discover More</a>
+              <a href="#customized" class="btn btn--ghost">Discover More</a>
             </div>
           </div>
         </article>
@@ -145,16 +145,16 @@
        MEN'S LATEST – HORIZONTAL CAROUSEL
   *************************** -->
     <!-- MEN -->
-    <section class="section shop-latest" aria-label="Men's Latest">
+    <section class="section shop-latest" aria-label="STEM Models" id="stem">
       <div class="latest-head">
-        <h2 style="text-align: center">Men’s Latest</h2>
+        <h2 style="text-align: center">STEM Models</h2>
         <p class="muted" style="text-align: center">
-          Details to details is what makes Hexashop different from the other
-          themes.
+          Details to details is what makes EcoPrint Shop different from the
+          other themes.
         </p>
       </div>
 
-      <div class="carousel" data-category="men">
+      <div class="carousel" data-category="stem">
         <button class="nav prev" type="button" aria-label="Previous">
           <span>&larr;</span>
         </button>
@@ -252,17 +252,21 @@
       </div>
     </section>
 
-    <!-- WOMEN -->
-    <section class="section shop-latest" aria-label="Men's Latest">
+    <!-- Archtecture <br />Prototype-->
+    <section
+      class="section shop-latest"
+      aria-label="Archtecture Prototype"
+      id="prototype"
+    >
       <div class="latest-head">
-        <h2 style="text-align: center">Men’s Latest</h2>
+        <h2 style="text-align: center">Archtecture Prototype</h2>
         <p class="muted" style="text-align: center">
           Details to details is what makes Hexashop different from the other
           themes.
         </p>
       </div>
 
-      <div class="carousel" data-category="men">
+      <div class="carousel" data-category="prototype">
         <button class="nav prev" type="button" aria-label="Previous">
           <span>&larr;</span>
         </button>
@@ -360,17 +364,21 @@
       </div>
     </section>
 
-    <!-- KIDS -->
-    <section class="section shop-latest" aria-label="Men's Latest">
+    <!-- 3D printed <br />Accessories -->
+    <section
+      class="section shop-latest"
+      aria-label="Men's Latest"
+      id="accessories"
+    >
       <div class="latest-head">
-        <h2 style="text-align: center">Men’s Latest</h2>
+        <h2 style="text-align: center">3D printed Accessories</h2>
         <p class="muted" style="text-align: center">
           Details to details is what makes Hexashop different from the other
           themes.
         </p>
       </div>
 
-      <div class="carousel" data-category="men">
+      <div class="carousel" data-category="accessories">
         <button class="nav prev" type="button" aria-label="Previous">
           <span>&larr;</span>
         </button>
@@ -467,17 +475,22 @@
         </button>
       </div>
     </section>
+
     <!-- ACCESSORIES -->
-    <section class="section shop-latest" aria-label="Men's Latest">
+    <section
+      class="section shop-latest"
+      aria-label="Customize Your Product"
+      id="customized"
+    >
       <div class="latest-head">
-        <h2 style="text-align: center">Men’s Latest</h2>
+        <h2 style="text-align: center">Customize Your Products</h2>
         <p class="muted" style="text-align: center">
           Details to details is what makes Hexashop different from the other
           themes.
         </p>
       </div>
 
-      <div class="carousel" data-category="men">
+      <div class="carousel" data-category="customized">
         <button class="nav prev" type="button" aria-label="Previous">
           <span>&larr;</span>
         </button>
@@ -809,13 +822,10 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#projects">Projects</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#donate">Donate</a></li>
-            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
 
