fix: missing logos

--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,11 @@
     <nav class="navbar">
       <div class="container">
         <a href="#" class="brand">
-          <img src="img/Ecoprint Logo 3.png" alt="Logo" class="logo" />
+          <img
+            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            alt="Logo"
+            class="logo"
+          />
         </a>
         <button class="hamburger" id="hamburger">
           <span></span>
