fix: about vission mission ui

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <li><a href="#partners">Our Supporters</a></li>
             </ul>
           </li>
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a href="#" class="nav-link"
               >Services <i class="fas fa-chevron-down"></i
             ></a>
@@ -63,10 +63,10 @@
               <li><a href="#">Grow Bags</a></li>
               <li><a href="#">Living Walls</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <li><a href="#" class="nav-link">Projects</a></li>
-          <li><a href="#" class="nav-link">Donate</a></li>
+          <!-- <li><a href="#" class="nav-link">Projects</a></li>
+          <li><a href="#" class="nav-link">Donate</a></li> -->
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
@@ -145,25 +145,25 @@
           <div class="others-section">
             <div class="ab-mission-vission">
               <div class="ab-mission">
-                <h2 class="about-title">Our Mission</h2>
+                <!-- <h2 class="about-title">Our Mission & Vission</h2> -->
                 <p>
                   EcoPrint Generation’s mission is to transform plastic waste
                   into sustainable 3D printing materials that empower education,
                   innovation, and environmental conservation—turning waste into
                   opportunity for a cleaner, smarter, and more inclusive future.
                 </p>
-                <br/>
-                <h2 class="about-title">Our Vision</h2>
+                <!-- <br/> -->
+                <!-- <h2 class="about-title">Our Vision</h2> -->
                 <p>
                   A continent where every learner can touch, see, and build
                   science— powered by sustainable materials and community
                   innovation.
                 </p>
-                <ul class="tick-list-vission">
+                <!-- <ul class="tick-list-vission">
                   <li>Lower cost, higher access</li>
                   <li>Materials from recycled plastics</li>
                   <li>Practical STEM for real schools</li>
-                </ul>
+                </ul> -->
               </div>
             </div>
             <div class="ab-media">
