--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a href="#" class="nav-link"
               >Services <i class="fas fa-chevron-down"></i
             ></a>
@@ -92,10 +92,10 @@
               <li><a href="#services">Grow Bags</a></li>
               <li><a href="#services">Living Walls</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="shop.html" class="nav-link">Shop</a></li>
-          <li><a href="#projects" class="nav-link">Projects</a></li>
-          <li><a href="#donate" class="nav-link">Donate</a></li>
+          <!-- <li><a href="#projects" class="nav-link">Projects</a></li> -->
+          <!-- <li><a href="#donate" class="nav-link">Donate</a></li> -->
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
